Adjustment to spacing and fixed broken image

--- a/stylesheets/inresumepage.scss
+++ b/stylesheets/inresumepage.scss
@@ -49,7 +49,9 @@
 		align-items: center;
 		display: flex;
 		background-color: #837E7C;
-		height: 80px;
+		height: 100px;
+
+		
 	}
 
 	#topBar h1 {
