--- a/stylesheets/resumepage.css
+++ b/stylesheets/resumepage.css
@@ -27,7 +27,7 @@ a {
   align-items: center;
   display: flex;
   background-color: #837E7C;
-  height: 80px; }
+  height: 100px; }
 
 #topBar h1 {
   width: 100%;
